--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<h1> Favorite Artist?</h1>
+<h1> Favorite Artist</h1>
 <p class="lead"> Use search Spotify to find your favorite artists and their recent albums and songs</p>
 <form>
   <div class="form-group">
